# testrepro

./: .gitignore  README.md  app.json  format.sh  package-lock.json  package.json  quick.sh  repro_build_patch.sh
.github/workflows/: CD.yml  CI.yml
android/: repro_build_patch.sh  settings.gradle
android/android/app/src/main/assets/: index.android.bundle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/awakeonlanmobile/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
cpp/: NativeModule.cpp  NativeModule.h  a_wake_on_lan.cpp  a_wake_on_lan.h  net_scan.cpp  net_scan.h  utils.cpp  utils.h
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt  video.txt
fastlane/metadata/android/en-US/changelogs/: 100001.txt
ios/: Podfile
ios/AwakeOnLANMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/AwakeOnLANMobile.xcodeproj/: project.pbxproj
ios/AwakeOnLANMobile.xcodeproj/xcshareddata/xcschemes/: AwakeOnLANMobile.xcscheme
specs/: NativeModule.ts
src/: App.tsx
src/components/: CustomButton.tsx  CustomHeader.tsx  CustomRadioButton.tsx  DeviceFlatList.tsx  DeviceForm.tsx  EditDeviceModal.tsx  MenuModal.tsx  TabNavigator.tsx
src/contexts/: DeviceContext.tsx  ThemeContext.tsx
src/screens/: AddDeviceScreen.tsx  DeviceListScreen.tsx  ScanHostsScreen.tsx
src/styles/: base.tsx  flatList.tsx
src/types/: device.ts
